[package]
name = "px4-param-audit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
comfy-table = "7.2.2"
mavlink = { version = "0.18.0", features = ["dialect-common"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
